--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="box div1 ">div1</div>
-        <div class="box div2 a">div2</div>
-        <div class="box div3 a">div3</div>
-        <div class="box div4 a">div4</div>
-        <div class="box div5">div5</div>
-        <div class="box div6 a">div6</div>
-        <div class="box div7 a">div7</div>
-        <div class="box div8 a">div8</div>
-        <div class="box div9 a">div9</div>
-        <div class="box div10 a">div10</div>
-        <div class="box div11 a">div11</div>
-        <div class="box div12">div12</div>
+        <div class="box div1 "></div>
+        <div class="box div2 a"></div>
+        <div class="box div3 a"></div>
+        <div class="box div4 a"></div>
+        <div class="box div5"></div>
+        <div class="box div6 a"></div>
+        <div class="box div7 a"></div>
+        <div class="box div8 a"></div>
+        <div class="box div9 a"></div>
+        <div class="box div10 a"></div>
+        <div class="box div11 a"></div>
+        <div class="box div12"></div>
     </div>
 </body>
 </html>
